--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -1,6 +1,7 @@
 /* body */
 body {
     background: #fff;
+    word-break: keep-all;
 }
 body.single {
     background: #f7f7f7;
@@ -713,13 +714,25 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 }
 .form-horizontal .form-group {
     border-bottom: 1px solid #e6e9ed;
-    padding-bottom: 10px;
+    margin-bottom: 0;
+    padding: 10px 0;
 }
 .form-horizontal .form-group.btn-wrap {
     border-bottom: none;
 }
+.form-horizontal .form-group .d-line {
+    padding-top: 19px;
+    margin-top: -10px;
+    margin-bottom: -10px;
+    height: 54px;
+    border-left: 2px solid #e6e9ed;
+}
 
-
+/* Table line */
+.table-bordered>thead>tr>td,
+.table-bordered>thead>tr>th {
+    border-bottom-width: 0px;
+}
 
 /* media Query */
 @media (max-width: 1200px) {
@@ -742,11 +755,20 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
         padding: 0 !important;
     }  
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .form-inline .form-control {
         display: inline-block;
         width: auto;
         vertical-align: middle;
+    }
+    div.dataTables_wrapper div.dataTables_length,
+    div.dataTables_wrapper div.dataTables_filter,
+    div.dataTables_wrapper div.dataTables_info,
+    div.dataTables_wrapper div.dataTables_paginate {
+        text-align: left;
+    }
+    div.dt-buttons {
+        margin-bottom: 0;
     }
 }
 
