LMS > 파일받기 버튼 css 커스텀 작업 업로드

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -156,22 +156,17 @@ ul.bar_tabs > li a {
     background: #fff !important;
     border-top-right-radius: 4px;
 }
-
-
 ul.bar_tabs > li.dropdown > a {
     padding: 10px 10px 10px 15px;
     z-index: 9997;
-    transition: all 1.3s ease-in-out;
     height: 40px;
 }
 ul.bar_tabs > li.dropdown:hover > a {
     position: relative;
     height: 41px;
     z-index: 9999;
-    transition: all 0.5s ease-in;
+    transition: all 0.1s ease-in;
 }
-
-
 ul.bar_tabs > li a:hover {
     background: #f5f7fa !important;
 }
@@ -778,7 +773,44 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     margin-right: 5px;
 }
 
-
+/* fileType */
+.filetype {
+    clear: both;
+    position: relative;
+    display: inline-block;
+}
+.filetype .file-text {
+    background: #fff;
+    width: 500px;
+    position: relative;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin: 0;
+    z-index: 10;
+}
+.filetype .file-select {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 34px;
+    overflow: hidden;
+}
+.filetype .file-select .input-file {
+    width: 100%;
+    height: 100%;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    cursor: pointer;
+}
+.filetype .file-btn {
+    display: inline-block;
+    height: 100%;
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+}
 /* media Query */
 @media (max-width: 1200px) {
     .x_title h2 {
