--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -492,6 +492,12 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .mt-50 {
     margin-top: 50px !important;
 }
+.mt-60 {
+    margin-top: 60px !important;
+}
+.mt-70 {
+    margin-top: 70px !important;
+}
 
 /* margin-bottom */
 .mb-0 {
@@ -580,6 +586,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 }
 .pt-30 {
     padding-top: 30px !important;
+}
+.pt-70 {
+    padding-top: 70px !important;
 }
 
 /* padding-bottom */
@@ -717,6 +726,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .clearfix {
     float: left;
 }
+.clearfix-r {
+    float: right;
+}
 
 /* form-horizontal RESET */
 .form-horizontal .checkbox, 
@@ -748,10 +760,10 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 }
 
 /* item margin */
-.form-horizontal .form-group .item .title:first-child {
+.form-horizontal .form-group .title:first-child {
     margin-top: 0;
 }
-.form-horizontal .form-group .item .title {
+.form-horizontal .form-group .title {
     margin-top: 5px;
 }
 
@@ -811,6 +823,36 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     text-align: center;
     cursor: pointer;
 }
+
+/* modal seat */
+#mem_seat_list tr th ul li {
+    display: inline-block;
+    line-height: 12px;
+    margin-left: 10px;
+}
+
+#mem_seat_list tr th .color-box {
+    display: inline-block;
+    width: 40px;
+    height: 12px;
+    text-indent: -9999px;
+    border: 1px solid #ccc;
+}
+#mem_seat_list.table>tbody>tr>td,
+#mem_seat_list.table>tbody>tr>th, 
+#mem_seat_list.table>tfoot>tr>td,
+#mem_seat_list.table>tfoot>tr>th,
+#mem_seat_list.table>thead>tr>td,
+#mem_seat_list.table>thead>tr>th {
+    border-top: none;
+}
+
+#mem_seat_list tr td button {
+    width: 100%;
+    height: 100%;
+}
+
+
 /* media Query */
 @media (max-width: 1200px) {
     .x_title h2 {
