LMS > 게시판관리 > 공지/상담게시판 read, modfy, reply 레이아웃 정렬

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -486,6 +486,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .mt-20 {
     margin-top: 20px !important;
 }
+.mt-25 {
+    margin-top: 25px !important;
+}
 .mt-30 {
     margin-top: 30px !important;
 }
@@ -532,6 +535,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .ml-10 {
     margin-left: 10px !important;
 }
+.ml-12-dot {
+    margin-left: 12.33333333%;
+}
 .ml-15 {
     margin-left: 15px !important;
 }
@@ -541,6 +547,7 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .ml-30 {
     margin-left: 30px !important;
 }
+
 .ml-50 {
     margin-left: 50px !important;
 }
@@ -738,6 +745,7 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     padding-top: 0;
 }
 .form-horizontal .form-group {
+    position: relative;
     border-bottom: 1px solid #e6e9ed;
     margin-bottom: 0;
     padding: 10px 0;
@@ -746,10 +754,11 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     border-bottom: none;
 }
 .form-horizontal .form-group .d-line {
-    padding-top: 19px;
-    margin-top: -10px;
-    margin-bottom: -10px;
-    height: 54px;
+    position: absolute;
+    top: 0;
+    left: 45.66666666%;
+    padding-top: 17px;
+    height: 100%;
     border-left: 2px solid #e6e9ed;
 }
 
@@ -850,6 +859,15 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 #mem_seat_list tr td button {
     width: 100%;
     height: 100%;
+}
+
+/* form-control-static */
+.form-horizontal .form-group .form-control-static p {
+    margin: 0;
+}
+
+.form-horizontal .form-control-static.short-div {
+
 }
 
 
