결제하기 > 쿠폰적용 팝업 쿠폰 스크롤 수정 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3511,6 +3511,11 @@ ul.btnWrap li {
     padding: 25px 20px;
     margin-left: 5px;
 }
+.couponBox .tabContent {
+    height: 175px;
+    overflow-x: auto;
+    border-top: 1px solid #959595;
+}
 table.couponTable {
     font-size: 11px;
     text-align: center;
